# Agent_Orchestration_System

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  scratch.py
alembic/: env.py
alembic/versions/: 45c468c51c83_init.py
data/: workflows.json
docs/: DEV_SETUP.md  PHASE_2_ORCHESTRATION.md  PROJECT_OVERVIEW.md
frontend/src/: App.css  App.tsx  index.css
scripts/: start-dev.ps1  test_api.py  test_graph.py  test_phase3.py  test_phase4.py  test_playwright.py
src/agent_orchestration_system/: __init__.py  app.py  main.py
src/agent_orchestration_system/api/: __init__.py  main.py  router.py
src/agent_orchestration_system/api/routes/: health.py  tasks.py  workflows.py
src/agent_orchestration_system/api/schemas/: __init__.py  tasks.py
src/agent_orchestration_system/core/: config.py  db.py
src/agent_orchestration_system/memory/: qdrant_setup.py  redis_client.py
src/agent_orchestration_system/orchestration/: __init__.py  graph.py  models.py  service.py  state.py
src/agent_orchestration_system/orchestration/agents/: executor.py  planner.py  supervisor.py
src/agent_orchestration_system/tools/: implementations.py  registry.py
tests/: test_health.py  test_workflows.py
tests/smoke/: test_api.py
